--- a/FeatherPlayer/MainWindow.xaml
+++ b/FeatherPlayer/MainWindow.xaml
@@ -1,12 +1,33 @@
-﻿<Window x:Class="FeatherPlayer.MainWindow"
+﻿<Window x:Name="wndMain" x:Class="FeatherPlayer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FeatherPlayer"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="FeatherPlayer" Height="560" Width="800"
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" 
+        AllowsTransparency="True" WindowStyle="None"
+        Background="#7A0097FF" Loaded="wndMain_Loaded" MouseLeftButtonDown="wndMain_MouseLeftButtonDown" BorderThickness="1"
+        >
     <Grid>
-        
+        <Grid x:Name="gridMain" HorizontalAlignment="Left" Margin="1,40,1,50" Width="798" d:IsHidden="True" Visibility="Hidden">
+            <Grid.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF362D8F" Offset="0.892"/>
+                    <GradientStop Color="#FF007ACA" Offset="0.468"/>
+                </LinearGradientBrush>
+            </Grid.Background>
+        </Grid>
+        <Grid x:Name="gridTitle" Height="40" VerticalAlignment="Top" Margin="1,0,1,0">
+            <Grid x:Name="btnExit" Width="33" Margin="0,0,1,0" d:LayoutOverrides="TopMargin, BottomMargin" HorizontalAlignment="Right" MouseEnter="btnExit_MouseEnter" MouseLeave="btnExit_MouseLeave" PreviewMouseLeftButtonDown="btnExit_PreviewMouseLeftButtonDown">
+                <Grid x:Name="btnExitBackground" Background="Red" Opacity="0"/>
+                <Canvas x:Name="CExit" Width="24" Height="24">
+                    <Path Fill="White" Data="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z" />
+                </Canvas>
+
+            </Grid>
+        </Grid>
+        <TextBlock x:Name="textBlock" Margin="107.926,165.2,116.926,0" TextWrapping="Wrap" TextAlignment="Center" Foreground="White" FontFamily="Microsoft YaHei UI Light" FontSize="40" d:LayoutOverrides="Width" VerticalAlignment="Top"><Run Text="Hello! "/><LineBreak/><Run Text="Welcome to use Feather Player"/><Run FontStyle="Italic" Text="!"/></TextBlock>
     </Grid>
 </Window>
