--- a/FeatherPlayer/MainWindow.xaml
+++ b/FeatherPlayer/MainWindow.xaml
@@ -5,20 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FeatherPlayer"
         mc:Ignorable="d"
-        Title="FeatherPlayer" Height="576" Width="900"
+        Title="FeatherPlayer" Height="576" Width="931"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize" 
         AllowsTransparency="True" WindowStyle="None"
-        Background="#7A0097FF" Loaded="wndMain_Loaded" MouseLeftButtonDown="wndMain_MouseLeftButtonDown" BorderThickness="1"
+        Background="#7A0097FF" Loaded="wndMain_Loaded" MouseLeftButtonDown="wndMain_MouseLeftButtonDown" BorderThickness="1" HorizontalAlignment="Center"
         >
     <Grid>
-        <Grid x:Name="gridMain" HorizontalAlignment="Left" Margin="1,40,1,50" Width="798" d:IsHidden="True" Visibility="Hidden">
-            <Grid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FF362D8F" Offset="0.892"/>
-                    <GradientStop Color="#FF007ACA" Offset="0.468"/>
-                </LinearGradientBrush>
-            </Grid.Background>
-        </Grid>
+        <Rectangle x:Name="gridMain" Margin="1,40,1,50" d:LayoutOverrides="LeftMargin, RightMargin"  Opacity="0.3" Fill="#7A0097FF"/>
         <Grid x:Name="gridTitle" Height="40" VerticalAlignment="Top" Margin="1,0,1,0">
             <Grid x:Name="btnExit" Width="33" Margin="0,0,1,0" d:LayoutOverrides="TopMargin, BottomMargin" HorizontalAlignment="Right" MouseEnter="btnExit_MouseEnter" MouseLeave="btnExit_MouseLeave" PreviewMouseLeftButtonDown="btnExit_PreviewMouseLeftButtonDown">
                 <Grid x:Name="btnExitBackground" Background="Red" Opacity="0"/>
@@ -29,5 +22,11 @@
             </Grid>
         </Grid>
         <TextBlock x:Name="textBlock" Margin="107.926,165.2,116.926,0" TextWrapping="Wrap" TextAlignment="Center" Foreground="White" FontFamily="Microsoft YaHei UI Light" FontSize="40" d:LayoutOverrides="Width" VerticalAlignment="Top" d:IsHidden="True"><Run Text="Hello! "/><LineBreak/><Run Text="Welcome to use Feather Player"/><Run FontStyle="Italic" Text="!"/></TextBlock>
+        <Grid HorizontalAlignment="Left" Height="45" Margin="0,529,0,0" VerticalAlignment="Top" Width="898">
+            <Path x:Name="Back" Data="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M8,8H10V16H8M16,8V16L11,12" Fill="White" Width="35" Height="35" Stretch="Fill" Margin="25,5,0,5" HorizontalAlignment="Left" />
+            <Path x:Name="next" Data="M10,16.5V7.5L16,12M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" Fill="White" Visibility="Visible" VerticalAlignment="Center" Margin="96.25,5,0,5"  Stretch="Fill" Height="35" HorizontalAlignment="Left" Width="35" MouseLeftButtonDown="next_MouseLeftButtonDown"/>
+            <Path x:Name="pause" Data="M15,16H13V8H15M11,16H9V8H11M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" Fill="White" Visibility="Hidden"/>
+            <Path x:Name="Next" Data="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M8,8L13,12L8,16M14,8H16V16H14" Fill="White" Width="35" Height="35" Stretch="Fill" Margin="170,5,0,5" HorizontalAlignment="Left" />
+        </Grid>
     </Grid>
 </Window>
